style: 회원가입 페이지 레이아웃 수정 및 불필요한 코드 제거

--- a/src/assets/css/globacl.css
+++ b/src/assets/css/globacl.css
@@ -41,4 +41,11 @@
     color: #fff;
 }
 
-.pe-none { pointer-events: none; }
+.pe-none {
+    pointer-events: none;
+}
+
+.demo-form-div {
+    width: 70%;
+    padding: 12px;
+}
